<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical"
    tools:context="net.iclassmate.teacherspace.ui.activity.dialog.InputUserCode">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_userCode"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#555555"/>
    <EditText
        android:id="@+id/bound_userCode"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/userCode"
        android:inputType="number"
        android:textSize="14sp"
        android:padding="5dp"
        android:maxLength="20"
        android:background="@color/background"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="#dddddd" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        >

        <TextView
            android:id="@+id/login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="#999999"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="#dddddd" />

        <TextView
            android:id="@+id/login_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ensure"
            android:textColor="@color/app_color"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
