<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:layout_margin="20dp"
    tools:context="net.iclassmate.teacherspace.ui.activity.dialog.BoundPhoneDialogActivity">
<TextView
    android:id="@+id/bound_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:textSize="16sp"
    android:textColor="#555555"
    android:visibility="gone"
    />
    <EditText
        android:id="@+id/bound_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/bound_tv"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:textSize="14sp"
        android:padding="5dp"
        android:maxLength="11"
        android:background="@color/background"
        />
    <LinearLayout
        android:id="@+id/bound_security_code"
        android:layout_below="@+id/bound_phone"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="14sp"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/verification_code"/>
        <Button
            android:id="@+id/bound_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/bound_security_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="9dp"
        android:paddingRight="9dp"
        android:paddingTop="12dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#dddddd" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/bound_security_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="14dp" >

        <TextView
            android:id="@+id/bound_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="#999999"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="#dddddd" />

        <TextView
            android:id="@+id/bound_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/bound"
            android:textColor="@color/app_color"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
